# i2cdog

./: pi_i2c_client.py  pii2c.py  readme.txt  run.txt  what.py
both-demo/: i2c-test-x2.py
pico-demo1/: CMakeLists.txt  i2c-test.py  voltmeter-i2c.c
picoi2c/: picoi2c.ino
